fixed issues with date picker z-index

--- a/src/index.css
+++ b/src/index.css
@@ -790,3 +790,7 @@ span.flatpickr-weekday,
 .simplebar-scrollbar.simplebar-visible:before {
   @apply opacity-100;
 }
+
+.flatpickr-calendar {
+  z-index: 999999 !important;
+}
